<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="ShoViewModel"
            type="com.udacity.shoestore.models.ShoeListViewModel" />
    </data>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context=".models.CreateShoeFragment"
    android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createShoeTitle"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoeName" />

        <EditText
            android:id="@+id/nameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoeCompany" />

        <EditText
            android:id="@+id/companyBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoeSize" />

        <EditText
            android:id="@+id/sizeBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoeDescription" />

        <EditText
            android:id="@+id/descriptionBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/saveButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="#C4B1E4"
            android:text="@string/Save"
            android:textColor="#390E85" />

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="#C4B1E4"
            android:text="@string/cancel"
            android:textColor="#390E85" />
    </LinearLayout>


</LinearLayout>

</layout>